apps/services/wger/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-server
  labels:
    app: gym-server
  annotations:
    link.argocd.argoproj.io/external-link: https://gym.gruber.dev.br
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wger
  template:
    metadata:
      labels:
        app: wger
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: frontend
        image: nginx:stable
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/
        - name: static
          mountPath: /var/www/html/static
          readOnly: true
        - name: media
          mountPath: /var/www/html/media
          readOnly: true
        ports:
          - containerPort: 8080
            protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 512Mi
      - name: backend
        image: wger/server:latest
        ports:
          - containerPort: 8000
        resources:
          requests:
            cpu: 150m
            memory: 512Mi
          limits:
            cpu: 450m
            memory: 768Mi
        volumeMounts:
        - name: static
          mountPath: /home/wger/static
          readOnly: false
        - name: media
          mountPath: /home/wger/media
          readOnly: false
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: wger-static
        - name: media
          persistentVolumeClaim:
            claimName: wger-media
        - name: nginx-config
          configMap:
            name: wger-proxy
