apps/services/wger/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wger-tailscale
  labels:
    app: wger
  annotations:
    tailscale.com/hostname: "gym"
spec:
  selector:
    app: wger
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
